Minor issue fixed
Minor issue fixed

--- a/MagicQuiz/Shared/Classes/Game/NTGImageGameViewController-IPhone5.xib
+++ b/MagicQuiz/Shared/Classes/Game/NTGImageGameViewController-IPhone5.xib
@@ -207,7 +207,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="p5_bkgd_simple.jpg" id="4">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="p5_bkgd_simple.jpg" id="4">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
