--- a/MagicQuiz/Shared/Classes/OtherApps/OtherAppsViewControllerIPad.xib
+++ b/MagicQuiz/Shared/Classes/OtherApps/OtherAppsViewControllerIPad.xib
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OtherAppsViewController">
             <connections>
-                <outlet property="btMenu" destination="12" id="24"/>
+                <outlet property="btMenu" destination="Chj-ya-uK1" id="dZk-gl-vwi"/>
                 <outlet property="crossPromotionView" destination="23" id="26"/>
                 <outlet property="view" destination="4" id="14"/>
             </connections>
@@ -18,40 +23,65 @@
             <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bkgd_simple_ipad@2x.jpg" id="9">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" image="bkgd_simple_ipad@2x.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="9">
                     <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <view tag="1000" contentMode="scaleToFill" id="23" customClass="CrossPromotionView">
-                    <rect key="frame" x="0.0" y="92" width="768" height="932"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view tag="1000" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="23" customClass="CrossPromotionView">
+                    <rect key="frame" x="0.0" y="82" width="768" height="942"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="12" customClass="VSButton">
-                    <rect key="frame" x="10" y="9" width="160" height="72"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="50"/>
-                    <inset key="contentEdgeInsets" minX="0.0" minY="3" maxX="0.0" maxY="0.0"/>
-                    <state key="normal" title="_Loc_Menu">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <state key="highlighted">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="onHome" destination="-1" eventType="touchUpInside" id="25"/>
-                    </connections>
-                </button>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="_Loc_Our_Apps" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" id="11">
-                    <rect key="frame" x="224" y="10" width="482" height="70"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="64"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KSC-Gc-pL1">
+                    <rect key="frame" x="0.0" y="0.0" width="768" height="82"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Chj-ya-uK1" customClass="VSButton">
+                            <rect key="frame" x="10" y="18" width="123" height="55.5"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="Chj-ya-uK1" secondAttribute="height" multiplier="20:9" id="f63-S1-XEo"/>
+                                <constraint firstAttribute="width" secondItem="Chj-ya-uK1" secondAttribute="height" multiplier="20:9" id="kUz-QZ-ewe"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="45"/>
+                            <inset key="contentEdgeInsets" minX="0.0" minY="3" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" title="_Loc_Menu">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <state key="highlighted">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="onHome" destination="-1" eventType="touchUpInside" id="8Cs-kE-dno"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="_Loc_Our_Apps" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="11">
+                            <rect key="frame" x="152" y="-5" width="464" height="102.5"/>
+                            <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="64"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="Chj-ya-uK1" firstAttribute="width" secondItem="KSC-Gc-pL1" secondAttribute="width" multiplier="0.16" id="28c-lZ-chz"/>
+                        <constraint firstItem="11" firstAttribute="centerX" secondItem="KSC-Gc-pL1" secondAttribute="centerX" id="Fnk-AI-v1f"/>
+                        <constraint firstItem="Chj-ya-uK1" firstAttribute="width" secondItem="Chj-ya-uK1" secondAttribute="height" multiplier="20:9" id="FuJ-RT-FBe"/>
+                        <constraint firstItem="Chj-ya-uK1" firstAttribute="centerY" secondItem="KSC-Gc-pL1" secondAttribute="centerY" multiplier="1.12" id="eed-6r-zlw"/>
+                        <constraint firstItem="11" firstAttribute="centerY" secondItem="Chj-ya-uK1" secondAttribute="centerY" id="hDa-9S-d7r"/>
+                        <constraint firstItem="Chj-ya-uK1" firstAttribute="leading" secondItem="KSC-Gc-pL1" secondAttribute="leading" constant="10" id="rAb-F6-liL"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="KSC-Gc-pL1" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="0HL-S7-xwl"/>
+                <constraint firstItem="23" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="JkW-Ma-Te8"/>
+                <constraint firstItem="KSC-Gc-pL1" firstAttribute="top" secondItem="4" secondAttribute="top" id="Kyf-8j-WC9"/>
+                <constraint firstItem="23" firstAttribute="top" secondItem="KSC-Gc-pL1" secondAttribute="bottom" id="OLY-PQ-G7F"/>
+                <constraint firstItem="23" firstAttribute="height" secondItem="4" secondAttribute="height" multiplier="0.92" id="eyr-fO-Wgw"/>
+                <constraint firstAttribute="trailing" secondItem="23" secondAttribute="trailing" id="q32-jn-3xJ"/>
+                <constraint firstAttribute="trailing" secondItem="KSC-Gc-pL1" secondAttribute="trailing" id="rni-rA-Vxu"/>
+                <constraint firstAttribute="bottom" secondItem="23" secondAttribute="bottom" id="xgE-8c-G9f"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
